# ActiveObject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
include/: ActiveObject.h  ConcurrentQueue.h
src/: ActiveObject.cc
src/main/cc/: ActiveObject.cc
src/main/include/: ActiveObject.h  ConcurrentQueue.h  Task.h
src/test/cc/: testAO.cc  testAO2.cc  testAOException.cc  testAsyncIO.cc
test/: testAO.cc  testAO2.cc  testAOException.cc  testAsyncIO.cc
